--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,9 +6,16 @@
   margin-right: -65px;
 }
 
-  &--gutters > div {
-    box-sizing: border-box;
+&--gutters-large {
+  margin-right: -100px;
+}
+
+&--gutters > div {
     padding-right: 65px;
+  }
+
+&--gutters-large > div {
+    padding-right: 100px;
   }
 
 &__b-margin-until-medium {
@@ -30,6 +37,11 @@
       width: 37%;
     }
 }
+
+&__medium-6 {
+    float: left;
+    width: 50%;
+  }
 
 &__medium-8 {
     float: left;
