--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -7,8 +7,32 @@ padding: 1.2rem 0;
   }
 }
 
+&--no-b-until-medium {
+ padding-bottom: 0;
+
+  @mixin atMedium {
+    margin-bottom: 4.5rem;
+  }
+}
+
+&--no-b-until-large {
+  padding-bottom: 0;
+
+  @mixin atLarge {
+    margin-bottom: 4.5rem;
+  }
+}
   &--blue {
     background-color: $mainBlue;
     color: $mainWhite;
+  }
+
+  &--testimonials {
+    background-color: #e0e6ef;
+
+    @mixin atLarge {
+      background: url('assets/images/testimonials-bg.jpg') top center no-repeat;
+      background-size: cover;
+    }
   }
 }
