--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,29 +1,35 @@
 .large-hero {
   border-bottom: 10px solid $mainBlue;
-  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
 
   &__image {
-    display: block;
+    grid-column: 1;
+    grid-row: 1;
+
+    img {
+      display: block;
+    }
   }
 
   &__text-content {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    width: 100%;
+    align-self: center;
+    grid-column: 1;
+    grid-row: 1;
+    padding-top: 60px;
     text-align: center;
   }
 
   &__title {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 2.4rem;
     margin: 0;
+    font-size: 2.4rem;
 
     @mixin atSmall {
       font-size: 4.8rem;
     }
+
   }
 
   &__subtitle {
@@ -35,9 +41,11 @@
     @mixin atSmall {
       font-size: 2.9rem;
     }
+
   }
+
   &__description {
-    color: $mainWhite;
+    color: #FFF;
     font-size: 1.1rem;
     font-weight: 100;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
@@ -49,4 +57,5 @@
       font-size: 1.875rem;
     }
   }
+
 }
