--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,3 +12,6 @@
 @import './modules/_section-title.css';
 @import './modules/_feature-item.css';
 @import './modules/_testimonials.css';
+@import './modules/_site-footer.css';
+@import './modules/_site-header.css';
+@import './modules/_primary-nav.css';
